integração da API FOCUS
