# storage/api-docs/api-docs.json
@@ -697,6 +697,152 @@
                 ]
             }
         },
+        "/api/settings/{id}": {
+            "put": {
+                "tags": [
+                    "Rota de empresas que vai utilizar o sistema"
+                ],
+                "summary": "Alterar Dados das configuração de emissao",
+                "operationId": "d70d9cc5381431c301f12c536297d332",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "Passar o ID da configuração",
+                        "required": true,
+                        "schema": {
+                            "type": "integer",
+                            "example": 1
+                        }
+                    }
+                ],
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "required": [
+                                    "name",
+                                    "cpf_cnpj"
+                                ],
+                                "properties": {
+                                    "cpf_cnpj_contabilidade": {
+                                        "type": "string",
+                                        "format": "text",
+                                        "example": "41055038000149"
+                                    },
+                                    "habilita_nfe": {
+                                        "type": "boolean",
+                                        "format": "boolean",
+                                        "example": "0"
+                                    },
+                                    "habilita_nfce": {
+                                        "type": "boolean",
+                                        "format": "boolean",
+                                        "example": "0"
+                                    },
+                                    "exibe_impostos_adicionais_danfe": {
+                                        "type": "boolean",
+                                        "format": "boolean",
+                                        "example": "0"
+                                    },
+                                    "exibe_unidade_tributaria_danfe": {
+                                        "type": "boolean",
+                                        "format": "boolean",
+                                        "example": "0"
+                                    },
+                                    "exibe_sempre_volumes_danfe": {
+                                        "type": "boolean",
+                                        "format": "boolean",
+                                        "example": "0"
+                                    },
+                                    "enviar_email_destinatario": {
+                                        "type": "boolean",
+                                        "format": "boolean",
+                                        "example": "0"
+                                    },
+                                    "discrimina_impostos": {
+                                        "type": "boolean",
+                                        "format": "boolean",
+                                        "example": "0"
+                                    },
+                                    "csc_nfce_producao": {
+                                        "type": "boolean",
+                                        "format": "boolean",
+                                        "example": "0"
+                                    },
+                                    "id_token_nfce_producao": {
+                                        "type": "boolean",
+                                        "format": "boolean",
+                                        "example": "0"
+                                    },
+                                    "proximo_numero_nfe_producao": {
+                                        "type": "integer",
+                                        "format": "integer",
+                                        "example": "123"
+                                    },
+                                    "proximo_numero_nfe_homologacao": {
+                                        "type": "integer",
+                                        "format": "integer",
+                                        "example": "123"
+                                    },
+                                    "serie_nfe_producao": {
+                                        "type": "integer",
+                                        "format": "integer",
+                                        "example": "1"
+                                    },
+                                    "serie_nfe_homologacao": {
+                                        "type": "integer",
+                                        "format": "integer",
+                                        "example": "1"
+                                    },
+                                    "serie_nfce_producao": {
+                                        "type": "integer",
+                                        "format": "integer",
+                                        "example": "1"
+                                    },
+                                    "serie_nfce_homologacao": {
+                                        "type": "integer",
+                                        "format": "integer",
+                                        "example": "1"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Configurações Atualizada",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "success": {
+                                            "type": "boolean",
+                                            "example": "true"
+                                        },
+                                        "message": {
+                                            "type": "string",
+                                            "example": "Dados atualizados com sucesso!"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Nao foi possivel atualizar o setting"
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
+        },
         "/api/update-password/{id}": {
             "put": {
                 "tags": [
